<resources>
    <string name="app_name">My Interests</string>
    <string name="add_an_achievement">Add An Achievement</string>
    <string name="time_worked_on">Time worked on today</string>
    <string name="textview">TextView</string>
    <string name="delete_msg">Do you want to delete this interest?</string>
    <string name="delete_confirmation">Are You Sure you want to delete?</string>
    <string name="Delete">DELETE</string>
    <string name="no_null_values">Values should not be null!</string>
    <string name="not_started">You have not started working on </string>
    <string name="not_completed">You have completed this interest</string>
    <string name="surpassed">You have surpassed your goal. Aim higher</string>
    <string name="almost_done">Woohoo! you are almost done</string>
    <string name="halfway">Congratulations you have passed halfway</string>
    <string name="keep_working">Keep working on this</string>
    <string name="today">Today</string>
    <string name="new_time_to_be_worked_on">New Time to be worked on</string>
    <string name="update_interest">Update Interest</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_interest">Add Interest</string>
    <string name="reset">Reset</string>
    <string name="hours">Hours</string>
    <string name="mins">mins</string>
    <string name="description">Description</string>

    <string name="minutes">Minutes</string>
    <string name="add_an_interest">Add An Interest</string>
    <string name="activity">Activity</string>
    <string name="name">Name</string>
    <string name="time_per_week">Time per week</string>
    <string name="interest_img">Interest_img</string>
</resources>
